MODINV-1271: Upgrade module to Vert.x 5.0 (#883)
* MODINV-1271: Upgrade module to Vert.x 5.0